--- a/src/main/resources/templates/bookingDesk.html
+++ b/src/main/resources/templates/bookingDesk.html
@@ -8,6 +8,7 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>WPB</title>
 </head>
+
 <body>
 <!-- Navbar-->
 <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
@@ -35,31 +36,72 @@
 
 <!-- Showcase-->
 <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
-    <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-center mx-auto">
-            <div class="m-5">
-                <h1>Welcome to </h1>
-                <h1 class="text-warning">Working Place Booking</h1>
-                <p class="lead mt-5">Book your working place now!</p>
-                <a th:href="@{/booking}">
-                    <button class="btn btn-warning btn-lg">
-                        Book Now
-                    </button>
-                </a>
-            </div>
-            <!-- Added office image -->
-            <img class="img-fluid w-50 d-none d-md-block"
-                 style="max-width: 300px"
-                 th:src="@{/images/office2.png}"
+    <div class="d-flex justify-content-center mt-5">
+        <h1> See the numbers of the work desks, <br> so you can choose one next
+            <span style='font-size:40px;'>&#128522;</span>
+        </h1>
+    </div>
+
+    <!-- 1 row    -->
+    <div class="row">
+        <!-- workingDeskPlan image -->
+        <div class="d-flex justify-content-center mt-5 col-lg-12 col-md-8 col-sm-12">
+            <img class="img-fluid w-75"
+                 style="max-width: 800px"
+                 th:src="@{/images/workdesksImage.png}"
                  alt="Office image"
             >
         </div>
     </div>
-    <div class="d-flex justify-content-center mt-5">
-        <!-- Added schnellecke image -->
-        <img class="img-fluid w-50 mt-5" style="max-width: 500px" th:src="@{/images/schnellecke.png}"
-             alt="Office image">
+
+    <!-- 2 row - date picker    -->
+    <div class="row mt-5 d-flex justify-content-center align-items-center">
+        <!--  -->
+        <label for="datepicker">Choose a Day to book a work desk </label>
+        <input type="date" id="datepicker" style="max-width: 200px" class="mt-3">
     </div>
+
+    <!-- 3 row - list available desk -->
+    <div class="row mt-5">
+        <table class="table table-striped ">
+            <thead>
+            <tr>
+                <th scope="col">Desk</th>
+                <th scope="col">Date</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Desk 1</td>
+                <td>2022-11-20</td>
+            </tr>
+            <tr>
+                <td>Desk 2</td>
+                <td>2022-11-21</td>
+            </tr>
+            <!-- More rows as needed -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- 4 row - submit button -->
+    <div class="row mt-5  justify-content-center align-items-center ">
+        <button type="button" class="btn btn-primary mt-3" style="max-width: 150px">
+            Submit
+        </button>
+    </div>
+
+
+    <!-- 5 row - schnellecke image -->
+    <div class="row mt-5 d-flex justify-content-center align-items-center mt-5">
+        <div class="d-flex justify-content-center mt-5">
+            <!-- Added schnellecke image -->
+            <img class="img-fluid w-25 mt-5"
+                 style="max-width: 400px"
+                 th:src="@{/images/schnellecke.png}" alt="Office image">
+        </div>
+    </div>
+
 </section>
 <!--test-->
 <!-- footer -->
