--- a/src/main/resources/templates/bookingDesk.html
+++ b/src/main/resources/templates/bookingDesk.html
@@ -13,7 +13,7 @@
 <!-- Navbar-->
 <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Working Place Booking</a>
+        <a class="navbar-brand" >Working Place Booking</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Login</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/home}">
+                        Home
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
