--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <!-- Navbar-->
 <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Working Place Booking</a>
+        <a class="navbar-brand" >Working Place Booking</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,10 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Login</a>
+                    <a class="nav-link " th:href="@{/login}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
@@ -41,7 +38,7 @@
                 <h1>Welcome to </h1>
                 <h1 class="text-warning">Working Place Booking</h1>
                 <p class="lead mt-5">Book your working place now!</p>
-                <a th:href="@{/booking}">
+                <a th:href="@{/login}">
                     <button class="btn btn-warning btn-lg">
                         Book Now
                     </button>
