Update repository interfaces and relocate class file
The RoleRepository and UserRepository interfaces now have added methods to find a role and user by name respectively. The WorkDeskBookingList class has been moved to the model.dto package. Additionally, the index.html template's action button now directs to the booking page instead of login.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                 <h1>Welcome to </h1>
                 <h1 class="text-warning">Working Place Booking</h1>
                 <p class="lead mt-5">Book your working place now!</p>
-                <a th:href="@{/login}">
+                <a th:href="@{/booking}">
                     <button class="btn btn-warning btn-lg">
                         Book Now
                     </button>
