--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                     <a class="nav-link " th:href="@{/login}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " th:href="@{/addUser}">Add User</a>
+                    <a class="nav-link " th:href="@{/user/create}">Add User</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
