--- a/src/main/resources/templates/bookingDesk.html
+++ b/src/main/resources/templates/bookingDesk.html
@@ -8,102 +8,113 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>WPB</title>
 </head>
-
 <body>
-<!-- Navbar-->
-<nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
-    <div class="container-fluid">
-        <a class="navbar-brand" >Working Place Booking</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/home}">
-                        Home
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
-                </li>
-            </ul>
+
+<header>
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
+        <div class="container-fluid">
+            <a class="navbar-brand">Working Place Booking</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/home}">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Logout</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
-
-<!-- Showcase-->
-<section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
-    <div class="d-flex justify-content-center mt-5">
-        <h1> See the numbers of the work desks, <br> so you can choose one next
-            <span style='font-size:40px;'>&#128522;</span>
-        </h1>
-    </div>
-    
-
-    <!-- 1 row    -->
-    <div class="row">
-        <!-- workingDeskPlan image -->
-        <div class="d-flex justify-content-center mt-5 col-lg-12 col-md-8 col-sm-12">
-            <img class="img-fluid w-75"
-                 style="max-width: 800px"
-                 th:src="@{/images/workdesksImage.png}"
-                 alt="Office image"
-            >
-        </div>
-    </div>
-
-    <!-- 2 row - date picker    -->
-    <div class="row mt-5 d-flex justify-content-center align-items-center">
-        <!--  -->
-        <label for="datepicker">Choose a Day to book a work desk </label>
-        <input type="date" id="datepicker" style="max-width: 200px" class="mt-3">
-    </div>
-
-    <!-- 3 row - list available desk -->
-    <div class="row mt-5">
-        <table class="table table-striped ">
-            <thead>
-            <tr>
-                <th scope="col">Desk</th>
-                <th scope="col">Date</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Desk 1</td>
-                <td>2022-11-20</td>
-            </tr>
-            <tr>
-                <td>Desk 2</td>
-                <td>2022-11-21</td>
-            </tr>
-            <!-- More rows as needed -->
-            </tbody>
-        </table>
-    </div>
-
-    <!-- 4 row - submit button -->
-    <div class="row mt-5  justify-content-center align-items-center ">
-        <button type="button" class="btn btn-primary mt-3" style="max-width: 150px">
-            Submit
-        </button>
-    </div>
+    </nav>
+</header>
 
 
-    <!-- 5 row - schnellecke image -->
-    <div class="row mt-5 d-flex justify-content-center align-items-center mt-5">
+<main>
+    <!-- Showcase-->
+    <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
         <div class="d-flex justify-content-center mt-5">
-            <!-- Added schnellecke image -->
-            <img class="img-fluid w-25 mt-5"
-                 style="max-width: 400px"
-                 th:src="@{/images/schnellecke.png}" alt="Office image">
+            <h1> See the numbers of the work desks, <br> so you can choose one next
+                <span style='font-size:40px;'>&#128522;</span>
+            </h1>
         </div>
-    </div>
 
+
+        <!-- 1 row    -->
+        <div class="row">
+            <!-- workingDeskPlan image -->
+            <div class="d-flex justify-content-center mt-5 col-lg-12 col-md-8 col-sm-12">
+                <img class="img-fluid w-75"
+                     style="max-width: 800px"
+                     th:src="@{/images/workdesksImage.png}"
+                     alt="Office image"
+                >
+            </div>
+        </div>
+
+        <!-- 2 row - date picker    -->
+        <div class="row mt-5 d-flex justify-content-center align-items-center">
+            <!--  -->
+            <label for="datepicker">Choose a Day to book a work desk </label>
+            <input type="date" id="datepicker" style="max-width: 200px" class="mt-3">
+        </div>
+
+        <!-- 3 row - list available desk -->
+        <div class="row mt-5">
+            <table class="table table-striped ">
+                <thead>
+                <tr>
+                    <th scope="col">Desk</th>
+                    <th scope="col">Date</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Desk 1</td>
+                    <td>2022-11-20</td>
+                </tr>
+                <tr>
+                    <td>Desk 2</td>
+                    <td>2022-11-21</td>
+                </tr>
+                <!-- More rows as needed -->
+                </tbody>
+            </table>
+        </div>
+
+        <!-- 4 row - submit button -->
+        <div class="row mt-5  justify-content-center align-items-center ">
+            <button type="button" class="btn btn-primary mt-3" style="max-width: 150px">
+                Submit
+            </button>
+        </div>
+
+
+        <!-- 5 row - schnellecke image -->
+        <div class="row mt-5 d-flex justify-content-center align-items-center mt-5">
+            <div class="d-flex justify-content-center mt-5">
+                <!-- Added schnellecke image -->
+                <img class="img-fluid w-25 mt-5"
+                     style="max-width: 400px"
+                     th:src="@{/images/schnellecke.png}" alt="Office image">
+            </div>
+        </div>
+
+    </section>
+</main>
+
+
+<!-- this is to full the gab between the main page and the footer -->
+<section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
 </section>
-<!--test-->
+
+
 <!-- footer -->
 <footer class="bg-dark text-light text-center">
     <div class="container-fluid d-flex flex-wrap justify-content-between align-items-center p-2">
