--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -9,66 +9,75 @@
     <title>WPB</title>
 </head>
 <body>
-<!-- Navbar-->
-<nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
-    <div class="container-fluid">
-        <a class="navbar-brand">Working Place Booking</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " th:href="@{/login}">Login</a>
-                </li>
-            </ul>
+
+
+<header>
+
+
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
+        <div class="container-fluid">
+            <a class="navbar-brand">Working Place Booking</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" th:href="@{/home}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " th:href="@{/login}">Login</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
 
 
 
 
+<main>
+    <!-- Showcase-->
+    <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
 
-<!-- Showcase-->
+        <div class="wrapper">
+
+            <div class="text-center mt-4 name">
+                Login
+            </div>
+            <form class="p-3 mt-3">
+                <div class="form-field d-flex align-items-center">
+                    <span class="far fa-user"></span>
+                    <input type="text" name="userName" id="userName" placeholder="Username">
+                </div>
+                <div class="form-field d-flex align-items-center">
+                    <span class="fas fa-key"></span>
+                    <input type="password" name="password" id="pwd" placeholder="Password">
+                </div>
+                <button class="btn mt-3">Login</button>
+            </form>
+
+            <div class="text-center fs-6">
+                <a href="#">Forget password?</a> or <a href="#">Sign up</a>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-center mt-5">
+            <!-- Added schnellecke image -->
+            <img class="img-fluid w-50 mt-5" style="max-width: 500px" th:src="@{/images/schnellecke.png}"
+                 alt="Office image">
+        </div>
+    </section>
+</main>
+
+
+
+<!-- this is to full the gab between the main page and the footer -->
 <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
-
-    <div class="wrapper">
-
-        <div class="text-center mt-4 name">
-            Login
-        </div>
-        <form class="p-3 mt-3">
-            <div class="form-field d-flex align-items-center">
-                <span class="far fa-user"></span>
-                <input type="text" name="userName" id="userName" placeholder="Username">
-            </div>
-            <div class="form-field d-flex align-items-center">
-                <span class="fas fa-key"></span>
-                <input type="password" name="password" id="pwd" placeholder="Password">
-            </div>
-            <button class="btn mt-3">Login</button>
-        </form>
-
-        <div class="text-center fs-6">
-            <a href="#">Forget password?</a> or <a href="#">Sign up</a>
-        </div>
-    </div>
-
-    <div class="d-flex justify-content-center mt-5">
-        <!-- Added schnellecke image -->
-        <img class="img-fluid w-50 mt-5" style="max-width: 500px" th:src="@{/images/schnellecke.png}"
-             alt="Office image">
-    </div>
-
-
-
 </section>
-
 
 
 
@@ -79,6 +88,11 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
@@ -94,7 +108,6 @@
         min-height: 100vh;
         flex-direction: column;
     }
-
 
 
     .wrapper {
@@ -163,7 +176,7 @@
         color: #039BE5;
     }
 
-    @media(max-width: 380px) {
+    @media (max-width: 380px) {
         .wrapper {
             margin: 30px 20px;
             padding: 40px 15px 15px 15px;
