--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,59 +9,75 @@
     <title>WPB</title>
 </head>
 <body>
-<!-- Navbar-->
-<nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
-    <div class="container-fluid">
-        <a class="navbar-brand" >Working Place Booking</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link " th:href="@{/login}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " th:href="@{/user/create}">Add User</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
-<!-- Showcase-->
-<section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
-    <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-center mx-auto">
-            <div class="m-5">
-                <h1>Welcome to </h1>
-                <h1 class="text-warning">Working Place Booking</h1>
-                <p class="lead mt-5">Book your working place now!</p>
-                <a th:href="@{/booking}">
-                    <button class="btn btn-warning btn-lg">
-                        Book Now
-                    </button>
-                </a>
+
+<header>
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
+        <div class="container-fluid">
+            <a class="navbar-brand">Working Place Booking</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link " th:href="@{/login}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " th:href="@{/user/create}">Add User</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/user/list}">User list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Logout</a>
+                    </li>
+                </ul>
             </div>
-            <!-- Added office image -->
-            <img class="img-fluid w-50 d-none d-md-block"
-                 style="max-width: 300px"
-                 th:src="@{/images/office2.png}"
-                 alt="Office image"
-            >
         </div>
-    </div>
-    <div class="d-flex justify-content-center mt-5">
-        <!-- Added schnellecke image -->
-        <img class="img-fluid w-50 mt-5" style="max-width: 500px" th:src="@{/images/schnellecke.png}"
-             alt="Office image">
-    </div>
+    </nav>
+</header>
+
+
+<main>
+    <!-- Showcase-->
+    <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
+        <div class="container">
+            <div class="d-sm-flex align-items-center justify-content-center mx-auto">
+                <div class="m-5">
+                    <h1>Welcome to </h1>
+                    <h1 class="text-warning">Working Place Booking</h1>
+                    <p class="lead mt-5">Book your working place now!</p>
+                    <a th:href="@{/booking}">
+                        <button class="btn btn-warning btn-lg">
+                            Book Now
+                        </button>
+                    </a>
+                </div>
+                <!-- Added office image -->
+                <img class="img-fluid w-50 d-none d-md-block"
+                     style="max-width: 300px"
+                     th:src="@{/images/office2.png}"
+                     alt="Office image"
+                >
+            </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+            <!-- Added schnellecke image -->
+            <img class="img-fluid w-50 mt-5" style="max-width: 500px" th:src="@{/images/schnellecke.png}"
+                 alt="Office image">
+        </div>
+    </section>
+</main>
+
+
+<!-- this is to full the gab between the main page and the footer -->
+<section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
 </section>
-<!--test-->
+
+
 <!-- footer -->
 <footer class="bg-dark text-light text-center">
     <div class="container-fluid d-flex flex-wrap justify-content-between align-items-center p-2">
@@ -69,6 +85,8 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
