--- a/src/main/resources/templates/user/userFormula.html
+++ b/src/main/resources/templates/user/userFormula.html
@@ -9,6 +9,8 @@
     <title>WPB</title>
 </head>
 <body>
+
+
 <header>
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
@@ -21,6 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link " th:href="@{/home}">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " th:href="@{/login}">Login</a>
                     </li>
                     <li class="nav-item">
@@ -32,9 +37,8 @@
     </nav>
 </header>
 
+
 <main>
-
-
     <!-- Showcase-->
     <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
         <div class="container">
@@ -145,6 +149,14 @@
         </div>
     </section>
 </main>
+
+
+<!-- this is to full the gab between the main page and the footer -->
+<section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
+</section>
+
+
+
 <!-- footer -->
 <footer class="bg-dark text-light text-center">
     <div class="container-fluid d-flex flex-wrap justify-content-between align-items-center p-2">
@@ -152,6 +164,11 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
