--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -9,6 +9,8 @@
     <title>WPB</title>
 </head>
 <body>
+
+
 <header>
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg navbar-success bg-success py-2">
@@ -21,6 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
+                        <a class="nav-link " th:href="@{/home}">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link " th:href="@{/login}">Login</a>
                     </li>
                     <li class="nav-item">
@@ -31,6 +36,7 @@
         </div>
     </nav>
 </header>
+
 
 
 <main>
@@ -85,9 +91,12 @@
     </section>
 </main>
 
+
+
+
+
 <!-- this is to full the gab between the main page and the footer -->
 <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
-
 </section>
 
 <!-- footer -->
@@ -97,6 +106,10 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous">
