--- a/src/main/resources/templates/user/userFormula.html
+++ b/src/main/resources/templates/user/userFormula.html
@@ -49,23 +49,23 @@
             <!--    2.ROW new user formula -->
             <div class="row justify-content-evenly">
 
-                <form class="col-md-7 col-lg-4" th:action="@{/user/post}" th:object="${user}" th:method="post">
+                <form class="col-md-7 col-lg-4" th:action="@{/user/add}" th:object="${user}" th:method="post">
 
-                    <!--    das in sehr interessant!-->
-                    <!--                <input type="hidden" th:field="${user.uuid}" th:id="uuid"/>-->
+                    <!--   this is interesting !-->
+                    <input type="hidden" th:field="${user.id}" th:id="id"/>
 
                     <!-- 1. field username -->
                     <div class="mb-3 d-md-flex flex-md-column align-items-md-center">
                         <label for="username"
                                class="form-label pt-1 pb-1 px-3 bg-warning  border border-secondary rounded"
                                style="--bs-bg-opacity:.5"
-                               text="Username">Username
+                               th:text="Username">Username
                         </label>
                         <input type="text"
-                               field="${user.userName}"
+                               th:field="${user.userName}"
                                class="form-control border border-secondary rounded"
                                id="username"
-                               placeholder="Username"
+                               th:placeholder="Username"
                         />
                     </div>
 
@@ -78,7 +78,7 @@
                                text="First Name">First Name
                         </label>
                         <input type="text"
-                               field="${user.firstName}"
+                               th:field="${user.firstName}"
                                class="form-control border border-secondary rounded"
                                id="firstName"
                                placeholder="First Name"
@@ -94,7 +94,7 @@
                                text="Last Name">Last Name
                         </label>
                         <input type="text"
-                               field="${user.lastName}"
+                               th:field="${user.lastName}"
                                class="form-control border border-secondary rounded"
                                id="lastName"
                                placeholder="Last Name"
@@ -109,7 +109,7 @@
                                text="E-Mail">E-Mail
                         </label>
                         <input type="email"
-                               field="${user.email}"
+                               th:field="${user.email}"
                                class="form-control border border-secondary rounded"
                                id="email"
                                placeholder="E-Mail"
@@ -124,7 +124,7 @@
                                text="Password">Password
                         </label>
                         <input type="password"
-                               field="${user.password}"
+                               th:field="${user.password}"
                                class="form-control border border-secondary rounded"
                                id="password"
                                placeholder="Password"
@@ -156,7 +156,6 @@
 </section>
 
 
-
 <!-- footer -->
 <footer class="bg-dark text-light text-center">
     <div class="container-fluid d-flex flex-wrap justify-content-between align-items-center p-2">
@@ -164,9 +163,6 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
-
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
