--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -38,28 +38,36 @@
 </header>
 
 
-
 <main>
     <!-- user table-->
     <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
+
         <h2 class="row justify-content-center h2 mt-3 mb-4 text-warning">
             The list with the users
         </h2>
 
+
         <table class="table table-header table-striped table-bordered text-center">
-            <thead>
+            <thead class="table table-group-divider">
             <tr>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>E-Mail</th>
-                <th>Options</th>
+                <th scope="col">Index Nr</th>
+                <th scope="col">Username</th>
+                <th scope="col">First name</th>
+                <th scope="col">Last name</th>
+                <th scope="col">E-Mail</th>
+                <th scope="col">Password</th>
+                <th colspan="2">Options</th>
             </tr>
             </thead>
+
             <tbody class="table-group-divider ">
-            <tr>
-                <td>Data 1</td>
-                <td>Data 2</td>
-                <td>Data 3</td>
+            <tr th:each="user,status:${users}">
+                <td th:text="${status.index + 1}"></td>
+                <td th:text="${user.userName}"></td>
+                <td th:text="${user.firstName}"></td>
+                <td th:text="${user.lastName}"></td>
+                <td th:text="${user.email}"></td>
+                <td th:text="${user.password}"></td>
 
                 <td class="table-cell">
                     <a href="#">
@@ -75,10 +83,17 @@
                         </button>
                     </a>
                 </td>
-
-                <!-- TODO: here I can put a footer for the table with the total number of the user like the learning project-->
-            </tr>
             </tbody>
+
+            <!-- this is a footer, and he will go at the end of my table -->
+            <tfoot class="table-group-divider">
+            <tr>
+                <!-- colspan is to expand this cell in 4 others cells-->
+                <td colspan="6" class="text-right text-bold">Die Summe alle Nutzer ist:</td>
+                <!-- this is a value that I take from the controller. Here I need the size of the user list.-->
+                <td th:text="${users.size()}"></td>
+            </tr>
+            </tfoot>
         </table>
     </section>
 
@@ -92,9 +107,6 @@
 </main>
 
 
-
-
-
 <!-- this is to full the gab between the main page and the footer -->
 <section class="bg-success text-center text-light opacity-75 p-5 flex-grow-1">
 </section>
@@ -106,8 +118,6 @@
         <p class="m-0 myFooterText">&copy; 2022 Working Place Booking. All rights reserved.</p>
     </div>
 </footer>
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
