--- a/src/main/resources/templates/user/userFormula.html
+++ b/src/main/resources/templates/user/userFormula.html
@@ -49,7 +49,7 @@
             <!--    2.ROW new user formula -->
             <div class="row justify-content-evenly">
 
-                <form class="col-md-7 col-lg-4" th:action="@{/user/add}" th:object="${user}" th:method="post">
+                <form class="col-md-7 col-lg-4" th:action="@{/user/create}" th:object="${user}" th:method="post">
 
                     <!--   this is interesting !-->
                     <input type="hidden" th:field="${user.id}" th:id="id"/>
