add the role functionality, add, delete ...
Service classes are moved to corresponding sub-packages for a more structured representation. CRUD operations for User and Role are enhanced to handle both creation and updates. Actions on users and roles are reflected in corresponding templates, with URL mappings correctly pointing to respective CRUD operations. Additionally, the user's password field is updated to display as plain text.

--- a/src/main/resources/templates/role/roleList.html
+++ b/src/main/resources/templates/role/roleList.html
@@ -63,16 +63,15 @@
                 <td th:text="${role.description}"></td>
 
                 <td class="table-cell">
-                    <a href="#">
-                        <!--    Button visible only to authorized users (ROLE_ADMIN) only they can delete someone.-->
+                    <a th:href="@{'/role/delete/' + ${role.getId()} }">
                         <button type="button" class="btn btn-sm btn-outline-danger me-2">
-                            Löschen
+                            Delete
                         </button>
                     </a>
 
-                    <a href="#">
+                    <a th:href="@{'/role/update/' + ${role.getId()} }">
                         <button type="button" class="btn btn-sm btn-outline-primary ">
-                            Ändern
+                            Edit
                         </button>
                     </a>
                 </td>
