Update navigation and add creation buttons
The navigation links in userList.html, userFormula.html, and roleList.html templates have been updated to improve site navigation. Add new User and Add new Role buttons were also added to userList.html and roleList.html, respectively, to expedite the process of creating new users and roles.

--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -26,7 +26,7 @@
                         <a class="nav-link " th:href="@{/home}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " th:href="@{/login}">Login</a>
+                        <a class="nav-link" th:href="@{/role/list}">Role-list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Logout</a>
@@ -95,6 +95,11 @@
             </tr>
             </tfoot>
         </table>
+
+
+        <button class="col-2 my-5 border border-secondary rounded btn btn-primary">
+            <a class="nav-link" th:href="@{/user/create}">Add new User</a>
+        </button>
     </section>
 
     <!-- Added schnellecke image on the button before footer -->
