--- a/src/main/resources/templates/user/userFormula.html
+++ b/src/main/resources/templates/user/userFormula.html
@@ -26,7 +26,10 @@
                         <a class="nav-link " th:href="@{/home}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " th:href="@{/login}">Login</a>
+                        <a class="nav-link" th:href="@{/user/list}">User-list</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/role/list}">Role-list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Logout</a>
