Refactor UserServiceImpl and update UI layout
The UserServiceImpl class was refactored to simplify the update and delete methods. All truth checking is now moved inside the update method, thus returning void. Addition of passwordEncoder into UserServiceImpl is planned for hashing the user's password. Adjustments were made to the bookingDesk.html layout to centralize content. Additionally, a comment explanation was added in UserController for id-related user operations.

--- a/src/main/resources/templates/bookingDesk.html
+++ b/src/main/resources/templates/bookingDesk.html
@@ -66,26 +66,28 @@
         </div>
 
         <!-- 3 row - list available desk -->
-        <div class="row mt-5">
-            <table class="table table-striped ">
-                <thead>
-                <tr>
-                    <th scope="col">Desk</th>
-                    <th scope="col">Date</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>Desk 1</td>
-                    <td>2022-11-20</td>
-                </tr>
-                <tr>
-                    <td>Desk 2</td>
-                    <td>2022-11-21</td>
-                </tr>
-                <!-- More rows as needed -->
-                </tbody>
-            </table>
+        <div class="row mt-5 justify-content-center">
+            <div class="col-8 col-md-6 col-lg-4">
+
+                <table class="table table-striped ">
+                    <thead>
+                    <tr>
+                        <th scope="col">Desk</th>
+                        <th scope="col">Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Desk 1</td>
+                        <td>2022-11-20</td>
+                    </tr>
+                    <tr>
+                        <td>Desk 2</td>
+                        <td>2022-11-21</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <!-- 4 row - submit button -->
